<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Call Out</string>
    <string name="title_section1">Black List</string>
    <string name="title_section2">By Contact </string>
    <string name="title_section3">By Message</string>
    <string name="title_section4">By Call Log</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_section0">Mode</string>
    <string name="action_settings">Do not disturb</string>
    <string name="radial_demo">Radial Menu</string>
    <string name="about">About</string>
    <string name="main_menu">Home</string>
    <string name="contact">Contact</string>
    <string name="about_body">Radial Menu Demo Version 1 by Arindam Nath.</string>
    <string name="contact_body">Contact Details Here!</string>
    <string name="main_body">Long press any part of the screen to bring up radial menu.</string>
    <string name="open_menu">Open Menu</string>
    <string name="normal">Normal</string>
    <string name="expandable">Expandable</string>
    <string name="close">Close</string>

    <string-array name="colors" translatable="false">
        <item>#99cc00</item>
        <item>#33b5e5</item>
        <item>#0099cc</item>
        <item>#547bca</item>
        <item>#aa66cc</item>
        <item>#9933cc</item>
        <item>#669900</item>
        <item>#aeb857</item>
        <item>#cc0000</item>
        <item>#df5948</item>
        <item>#ff4444</item>
        <item>#ae6b23</item>
        <item>#ff8800</item>
        <item>#e5ae4f</item>
        <item>#ffbb33</item>
        <item>#cccccc</item>
        <item>#888888</item>

    </string-array>


    <string-array name="blockmode">
        <item>Accepts All Calls and Sms</item>
        <item>Block All Calls and Sms</item>
        <item>Allow Only Contacts</item>
        <item>Block Calls and Sms From Black List </item>
        <item>Do not Disturb</item>
    </string-array>


    <string-array name="block_type">
        <item>Hang Up</item>
        <item>Mute</item>
        <item> Vibrate </item>

    </string-array>


    <string-array name="duration">
        <item>None</item>
        <item>15 minutes</item>
        <item>Half an Hour </item>
        <item>One Hour </item>
        <item>Two Hours</item>
        <item>Three Hours</item>
    </string-array>

    <string-array name="duration_value">
        <item></item>
        <item>15 minutes</item>
        <item>Half an Hour </item>
        <item>One Hour </item>
        <item>Two Hours</item>
        <item>Three Hours</item>


    </string-array>
    <string name="action_contact">Contact</string>
    <string name="action_fastscroll">Fast scroll</string>
    <string name="action_addpadding">Add padding</string>
    <string name="action_showShadow">Show shadow</string>
    <string name="action_showHeaderAndFooter">Show Header &amp; Footer</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_dialog">Dialog</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_share">Share</string>
    <string name="title_activity_review">Review</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_general">General</string>


    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>


    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="FlurryAgent">YD89P7T8QZ3KSR85329N</string>


</resources>
